    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22384).
  * Prefer external log configuration file to built-in (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23640).
  * Do log in the IsLinkedListEmpty() method to prevent overflow (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23640).

2013-06-24  6.8.6-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-2, SVN revision 12561.

2013-06-21  6.8.6-2 Cristy  <quetzlzacatenango@image...>
  * Fix memory corruption in the MorphologyApply() method.

2013-06-20  6.8.6.2 Glenn Randers-Pehrson <glennrp@image...>
  * Quiet two warnings about uninitialized variables in coders/png.c

2013-06-20  6.8.6-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-1, SVN revision 12509.

2013-06-16  6.8.6-1 Cristy  <quetzlzacatenango@image...>
  * Don't decompand RGB for the -modulate option.
  * Improve LCHab and LCHuv roundtrip to / from sRGB (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23596).

2013-06-16  6.8.6-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-0, SVN revision 12475.

2013-06-10  6.8.6-0 Cristy  <quetzlzacatenango@image...>
  * Clone image->intensity in CloneImageProperties() (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23569).
  * Split test suite into smaller tests (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23577).
  * Undercolor rectangle was off by one pixel (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23574).
  * Don't msync() for a read-only memory-mapped mode (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23531).
  * BlurChannelImage() no longer faults for certain CMYK images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23581).
  * Reduce memory requirements for large BMP images.
